--- a/Personal Webpage/style.css
+++ b/Personal Webpage/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    overflow: hidden; /* NO page scrolling */
+    overflow: hidden; 
 }
 
 .container {
@@ -64,7 +64,6 @@ section {
     border-radius: 12px;
 }
 
-/* Section headings */
 h2 {
     font-size: 14.5px;
     color: #d6006d;
@@ -103,5 +102,6 @@ a:hover {
     background: linear-gradient(to right, transparent, #ff6fb1, transparent);
     margin: 16px 0;
 }
+
 
 
